--- a/src/app/lectura/page/listar/listar.html
+++ b/src/app/lectura/page/listar/listar.html
@@ -1,83 +1,75 @@
 <div class="overflow-x-auto border rounded-lg p-4">
-  <h2 class="text-2xl font-semibold mb-6 text-center text-gray-800">
-    Lecturas de Medidores
-  </h2>
+	<h2 class="text-2xl font-semibold mb-6 text-center text-gray-800">
+		Lecturas de Medidores
+	</h2>
 
-  <table class="min-w-full divide-y divide-gray-200">
-    <thead class="bg-gray-100">
-      <tr class="bg-gray-50">
-        <!-- Código -->
-        <th class="px-3 py-2">
-          
-        </th>
+	<table class="min-w-full divide-y divide-gray-200">
+		<thead class="bg-gray-100">
+			<tr
+				class="bg-gray-50">
+				<!-- Código -->
+				<th class="px-3 py-2"></th>
 
-        <!-- Mes (vacío o futuro filtro) -->
-        <th class="px-3 py-2"></th>
+				<!-- Mes (vacío o futuro filtro) -->
+				<th class="px-3 py-2"></th>
 
-        <!-- Lectura anterior -->
-        <th class="px-3 py-2"></th>
+				<!-- Lectura anterior -->
+				<th class="px-3 py-2"></th>
 
-        <!-- Lectura actual -->
-        <th class="px-3 py-2"></th>
+				<!-- Lectura actual -->
+				<th class="px-3 py-2"></th>
 
-        <!-- Fecha inicio -->
-        <th class="px-3 py-2">
-          <input type="date" [(ngModel)]="fechaInicio" class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
-                 focus:border-blue-500 focus:ring-2 focus:ring-blue-200" />
-        </th>
+				<!-- Fecha inicio -->
+				<th class="px-3 py-2">
+					<input type="date" [(ngModel)]="fechaInicio" class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
+					                 focus:border-blue-500 focus:ring-2 focus:ring-blue-200"/>
+				</th>
 
-        <!-- Fecha fin -->
-        <th class="px-3 py-2">
-          <input type="date" [(ngModel)]="fechaFin" class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
-                 focus:border-blue-500 focus:ring-2 focus:ring-blue-200" />
-        </th>
+				<!-- Fecha fin -->
+				<th class="px-3 py-2">
+					<input type="date" [(ngModel)]="fechaFin" class="w-full rounded-lg border border-gray-300 px-2 py-2 text-sm
+					                 focus:border-blue-500 focus:ring-2 focus:ring-blue-200"/>
+				</th>
 
-        <!-- Botón buscar -->
-        <th class="px-3 py-2 text-center">
-          <button class="w-full flex items-center justify-center gap-2
-                 rounded-lg bg-blue-600 px-4 py-2 text-sm font-semibold text-white
-                 hover:bg-blue-700 transition-colors
-                 focus:outline-none focus:ring-2 focus:ring-blue-300"
-                 (click)="listarLecturas()"
-                 >
-            🔍 Buscar
-          </button>
-        </th>
-      </tr>
+				<!-- Botón buscar -->
+				<th class="px-3 py-2 text-center">
+					<button class="w-full flex items-center justify-center gap-2
+						                 rounded-lg bg-blue-600 px-4 py-2 text-sm font-semibold text-white
+						                 hover:bg-blue-700 transition-colors
+						                 focus:outline-none focus:ring-2 focus:ring-blue-300" (click)="listarLecturas()">
+						🔍 Buscar
+					</button>
+				</th>
+			</tr>
 
-      <tr>
-        <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Medidor</th>
-        <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Mes</th>
-        <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Lectura Anterior</th>
-        <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Lectura Actual</th>
-        <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Consumo</th>
-        <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Costo</th>
-        <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Acciones</th>
-      </tr>
-    </thead>
-    <tbody class="divide-y divide-gray-200 bg-white text-sm">
-         @for (item of listarLecturas$ | async; track $index) {
-          <tr>
-        <td class="px-4 py-2">{{item.numeroMedidor}}</td>
-        <td class="px-4 py-2">{{item.mes}}-{{item.gestion}}</td>
-        <td class="px-4 py-2">{{item.lecturaAnterior}}</td>
-        <td class="px-4 py-2">{{item.lecturaActual}}</td>
-        <td class="px-4 py-2">{{item.consumoTotal}}</td>
-        <td class="px-4 py-2">bs {{item.costoApagar}}</td>
-        <td class="px-4 py-2 space-x-2">
-          <button class="bg-yellow-400 text-white px-2 py-1 rounded hover:bg-yellow-500 text-xs">Editar</button>
-          <button class="bg-red-600 text-white px-2 py-1 rounded hover:bg-red-700 text-xs">Eliminar</button>
-        </td>
-      </tr>
-         }
-     
-    </tbody>
-  </table>
-<mat-paginator
-  [length]="totalPaginas"
-  [pageSize]="20"
+			<tr>
+				<th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Medidor</th>
+				<th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Mes</th>
+				<th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Lectura Anterior</th>
+				<th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Lectura Actual</th>
+				<th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Consumo</th>
+				<th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Costo</th>
+				<th class="px-4 py-2 text-left text-sm font-medium text-gray-700">Acciones</th>
+			</tr>
+		</thead>
+		<tbody class="divide-y divide-gray-200 bg-white text-sm">
+			@for (item of listarLecturas$ | async; track $index) {
+			<tr>
+				<td class="px-4 py-2">{{item.numeroMedidor}}</td>
+				<td class="px-4 py-2">{{item.mes}}-{{item.gestion}}</td>
+				<td class="px-4 py-2">{{item.lecturaAnterior}}</td>
+				<td class="px-4 py-2">{{item.lecturaActual}}</td>
+				<td class="px-4 py-2">{{item.consumoTotal}}</td>
+				<td class="px-4 py-2">bs
+					{{item.costoApagar}}</td>
+				<td class="px-4 py-2 space-x-2">
+					<button [routerLink]="['/lectura/detalle', item.idMedidor, item._id]" class="bg-red-600 text-white px-2 py-1 rounded hover:bg-red-700 text-xs">Recibo</button>
+				</td>
+			</tr>
+			}
 
-  (page)="onPageChange($event)">
-</mat-paginator>
+		</tbody>
+	</table>
+	<mat-paginator [length]="totalPaginas" [pageSize]="20" (page)="onPageChange($event)"></mat-paginator>
 
 </div>
