--- a/src/app/app.html
+++ b/src/app/app.html
@@ -167,16 +167,12 @@
       </div>
 
       <!-- Usuarios -->
-      <a routerLink="/usuarios" class="flex items-center p-3 hover:bg-gray-100">
+      <a routerLink="/usuario/listar" class="flex items-center p-3 hover:bg-gray-100">
         <span class="material-icons">group</span>
         <span class="ml-2">Usuarios</span>
       </a>
 
-      <!-- Configuración -->
-      <a routerLink="/configuracion" class="flex items-center p-3 hover:bg-gray-100">
-        <span class="material-icons">settings</span>
-        <span class="ml-2">Configuración</span>
-      </a>
+      
 
       <!-- Logout -->
       <a routerLink="/logout" class="flex items-center p-3 hover:bg-gray-100 mt-auto">
