--- a/src/app/cliente/components/listar-cliente/listar-cliente.html
+++ b/src/app/cliente/components/listar-cliente/listar-cliente.html
@@ -60,6 +60,9 @@
               class="mt-1 w-full p-1 border border-gray-300 rounded text-sm"
             />
           </th>
+           <th class="px-4 py-2 text-left text-sm font-medium text-gray-700">
+            Celular
+          </th>
         </tr>
       </thead>
       <tbody class="divide-y divide-gray-200 bg-white">
@@ -78,6 +81,7 @@
           <td class="px-4 py-2">{{ item.nombre }}</td>
           <td class="px-4 py-2">{{ item.apellidoPaterno }}</td>
           <td class="px-4 py-2">{{ item.apellidoMaterno }}</td>
+           <td class="px-4 py-2">{{ item.celular }}</td>
         </tr>
         }
       </tbody>
