--- a/src/app/usuario/modal/crear-usuario/crear-usuario.html
+++ b/src/app/usuario/modal/crear-usuario/crear-usuario.html
@@ -1,1 +1,120 @@
-<p>crear-usuario works!</p>
+<!-- Botón para abrir modal -->
+<button class="bg-blue-600 text-white px-4 py-2 rounded" (click)="abrirModal()">
+    Crear
+</button>
+
+@if (isOpen) {
+<div class="fixed inset-0 flex items-center justify-center z-50 bg-opacity-999">
+    <div class="bg-white rounded-lg shadow-lg w-full max-w-md p-6">
+
+        <div class="flex justify-between items-center mb-4">
+            <h2 class="text-xl font-semibold">Crear Cliente</h2>
+            <button (click)="cerrarModal()" class="text-xl">✕</button>
+        </div>
+
+        <form [formGroup]="usuarioForm" class="space-y-4">
+
+            <!-- CI -->
+            <div>
+                <input type="text" placeholder="CI" formControlName="ci" class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('ci')?.touched && usuarioForm.get('ci')?.invalid) {
+                <p class="text-red-500 text-sm">El CI es obligatorio</p>
+                }
+            </div>
+
+            <!-- Nombre -->
+            <div>
+                <input type="text" placeholder="Nombre" formControlName="nombre"
+                    class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('nombre')?.touched && usuarioForm.get('nombre')?.invalid) {
+                <p class="text-red-500 text-sm">El nombre es obligatorio</p>
+                }
+            </div>
+
+            <!-- Apellido Paterno -->
+            <div>
+                <input type="text" placeholder="Apellido Paterno" formControlName="apellidoPaterno"
+                    class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('apellidoPaterno')?.touched && usuarioForm.get('apellidoPaterno')?.invalid) {
+                <p class="text-red-500 text-sm">El apellido paterno es obligatorio</p>
+                }
+            </div>
+
+            <!-- Apellido Materno -->
+            <div>
+                <input type="text" placeholder="Apellido Materno" formControlName="apellidoMaterno"
+                    class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('apellidoMaterno')?.touched && usuarioForm.get('apellidoMaterno')?.invalid) {
+                <p class="text-red-500 text-sm">El apellido materno es obligatorio</p>
+                }
+            </div>
+
+            <!-- Celular -->
+            <div>
+                <input type="text" placeholder="Celular" formControlName="celular"
+                    class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('celular')?.touched && usuarioForm.get('celular')?.invalid) {
+                <p class="text-red-500 text-sm">El celular es obligatorio</p>
+                }
+            </div>
+
+
+            <div>
+                <input type="text" placeholder="Usuario" formControlName="usuario"
+                    class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('usuario')?.touched && usuarioForm.get('usuario')?.invalid) {
+                <p class="text-red-500 text-sm">El Usuario es obligatorio</p>
+                }
+            </div>
+
+            <div>
+                <input type="text" placeholder="Contraseña" formControlName="password"
+                    class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('password')?.touched && usuarioForm.get('password')?.invalid) {
+                <p class="text-red-500 text-sm">La Contraseña es obligatorio</p>
+                }
+            </div>
+
+          
+
+
+            <div class="mb-4">
+                <label class="block text-sm font-medium text-gray-700 mb-1">rol </label>
+                <select formControlName="rol" class="w-full px-3 py-2 border
+                                 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <option value="">Seleccione una rol</option>
+                    <option value="ADMINISTRADOR">ADMINISTRADOR</option>
+                    <option value="LECTURADOR">LECTURADOR</option>
+
+
+                </select>
+
+                @if(usuarioForm.get('tarifa')?.invalid && usuarioForm.get('tarifa')?.touched){
+                <small class="text-red-500">la rol es obligatorio</small>
+                }
+            </div>
+
+            
+            <div>
+                <input type="text" placeholder="direccion" formControlName="direccion"
+                    class="w-full border rounded px-3 py-2" />
+                @if (usuarioForm.get('direccion')?.touched && usuarioForm.get('direccion')?.invalid) {
+                <p class="text-red-500 text-sm">El direccion es obligatorio</p>
+                }
+            </div>
+        </form>
+
+        <div class="flex justify-end gap-3 mt-6">
+            <button (click)="cerrarModal()" class="px-4 py-2 border rounded">
+                Cancelar
+            </button>
+
+            <button (click)="guardarUsuario()" class="px-4 py-2 bg-blue-600 text-white rounded disabled:opacity-50"
+                >
+                Guardar
+            </button>
+        </div>
+
+    </div>
+</div>
+}
