--- a/src/app/usuario/page/listar-usuario/listar-usuario.html
+++ b/src/app/usuario/page/listar-usuario/listar-usuario.html
@@ -1,5 +1,6 @@
 <div class="mb-6">
   <h3 class="text-lg font-medium mb-3 text-gray-700">Usuarios</h3>
+  <app-crear-usuario/>
   <div class="overflow-x-auto border rounded-lg">
     <table class="min-w-full divide-y divide-gray-200">
       <thead class="bg-gray-100">
@@ -48,6 +49,7 @@
           <td class="px-4 py-2">{{ item.apellidoMaterno }}</td>
              <td class="px-4 py-2">{{ item.usuario }}</td>
                <td class="px-4 py-2">{{ item.rol }}</td>
+                <td class="px-4 py-2">{{ item.direccion }}</td>
         </tr>
         }
       </tbody>
