--- a/src/app/usuario/modal/crear-usuario/crear-usuario.html
+++ b/src/app/usuario/modal/crear-usuario/crear-usuario.html
@@ -75,7 +75,7 @@
                 }
             </div>
 
-          
+
 
 
             <div class="mb-4">
@@ -94,7 +94,7 @@
                 }
             </div>
 
-            
+
             <div>
                 <input type="text" placeholder="direccion" formControlName="direccion"
                     class="w-full border rounded px-3 py-2" />
@@ -109,8 +109,7 @@
                 Cancelar
             </button>
 
-            <button (click)="guardarUsuario()" class="px-4 py-2 bg-blue-600 text-white rounded disabled:opacity-50"
-                >
+            <button (click)="guardarUsuario()" class="px-4 py-2 bg-blue-600 text-white rounded disabled:opacity-50">
                 Guardar
             </button>
         </div>
