--- a/src/app/medidor/page/crear-medidor/crear-medidor.html
+++ b/src/app/medidor/page/crear-medidor/crear-medidor.html
@@ -1,5 +1,5 @@
 <div class="w-full p-4 bg-gray-50 min-h-screen">
-    <div class="max-w-7xl mx-auto">
+    <div class="max-w-full mx-auto">
         <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
 
 
