--- a/src/app/medidor/page/listar/listar.html
+++ b/src/app/medidor/page/listar/listar.html
@@ -81,7 +81,7 @@
               </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200">
-              @for (item of listarMedidorClientes$ | async; track $index) {
+              @for (item of listarMedidorClientes(); track $index) {
               <tr>
                 <td class="px-4 py-2">{{item.codigo}}</td>
                 <td class="px-4 py-2">{{item.ci}}</td>
@@ -93,6 +93,10 @@
                 <td class="px-4 py-2">{{item.tarifa}}</td>
                 <td class="px-4 py-2">
                   <span class="px-2 py-1 bg-green-100 text-green-700 rounded text-xs font-medium">{{item.estado}}</span>
+                </td>
+                <td class="px-4 py-2">
+                  <button class="bg-red-600 text-white px-3 py-1 rounded -700 text-xs"
+                    (click)="eliminar(item)">Eliminar</button>
                 </td>
                 <td class="px-4 py-2">
                   <button class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700 text-xs">Editar</button>
