--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,10 @@
 <div class="relative h-screen bg-gray-100">
   <!-- SIDEBAR OVERLAY -->
+  @if (drawerOpen) {
   <div
-    *ngIf="drawerOpen"
     class="fixed top-16 left-0 w-full h-[calc(100%-64px)]"
     (click)="toggleDrawer()"
-  ></div>
+  ></div>}
 
   <!-- SIDEBAR -->
   <aside
@@ -190,7 +190,7 @@
       <h1 class="text-lg font-semibold">Sistema de Agua</h1>
     </header>
 
-    <!-- CONTENIDO -->
+  
     <main class="flex-1 overflow-auto p-4 relative z-0">
       <router-outlet></router-outlet>
     </main>
