--- a/src/app/medidor/page/editar-medidor/editar-medidor.html
+++ b/src/app/medidor/page/editar-medidor/editar-medidor.html
@@ -68,7 +68,7 @@
 
                     </div>
 
-                    <form (submit)="btnRegistrarMedidor($event)">
+                    <form (submit)="btnEditarMedidor($event)">
 
                         <!-- Número de Medidor -->
                         <div class="mb-4">
