--- a/src/app/medidor/page/listar/listar.html
+++ b/src/app/medidor/page/listar/listar.html
@@ -99,7 +99,7 @@
                     (click)="eliminar(item)">Eliminar</button>
                 </td>
                 <td class="px-4 py-2">
-                  <button class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700 text-xs">Editar</button>
+                  <button  [routerLink]="['/medidor/editar', item._id]" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700 text-xs">Editar</button>
                 </td>
               </tr>
               }
