--- a/src/app/autenticacion/page/login/login.html
+++ b/src/app/autenticacion/page/login/login.html
@@ -1,5 +1,5 @@
-<div class="bg-blue-50 flex items-center justify-center min-h-screen">
-  <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-sm border border-blue-100">
+<div class="flex items-center justify-center min-h-screen">
+  <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-sm border ">
 
     <h2 class="text-2xl font-semibold text-center text-blue-700 mb-6">
       Sistema de Agua - Acceso
