--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,8 @@
+  @if (isAutenticacion) {
 <div class="relative h-screen bg-gray-100">
-  <!-- SIDEBAR OVERLAY -->
+  
+
+   <!-- SIDEBAR OVERLAY -->
   @if (drawerOpen) {
   <div
     class="fixed top-16 left-0 w-full h-[calc(100%-64px)]"
@@ -189,10 +192,17 @@
       <button (click)="toggleDrawer()" class="material-icons mr-4">menu</button>
       <h1 class="text-lg font-semibold">Sistema de Agua</h1>
     </header>
+    
 
   
     <main class="flex-1 overflow-auto p-4 relative z-0">
       <router-outlet></router-outlet>
     </main>
-  </div>
+       </div>
+     
 </div>
+ } @else {
+   <main class="flex-1 overflow-auto p-4 relative z-0">
+      <router-outlet></router-outlet>
+    </main>
+}
