--- a/src/app/autenticacion/page/login/login.html
+++ b/src/app/autenticacion/page/login/login.html
@@ -5,42 +5,52 @@
       Sistema de Agua - Acceso
     </h2>
 
-    <form>
+    <form (submit)="btnSudmint($event)">
 
       <div class="mb-4">
         <label class="block text-blue-600 text-sm mb-2">
           Usuario
         </label>
-        <input
-          type="text"
-          placeholder="Nombre de usuario"
-          class="w-full px-4 py-2 border border-blue-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
-        />
+        <input type="text" [field]="form.usuario" placeholder="Nombre de usuario"
+          class="w-full px-4 py-2 border border-blue-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
+        @for (e of form.usuario().errors(); track $index) {
+        @if(this.form().touched()) {
+        <p class="text-red-500 text-sm mt-1">
+          {{ e.message }}
+        </p>
+        }
+        }
       </div>
 
       <div class="mb-6">
         <label class="block text-blue-600 text-sm mb-2">
           Contraseña
         </label>
-        <input
-          type="password"
-          placeholder="••••••••"
-          class="w-full px-4 py-2 border border-blue-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
-        />
+        <input type="password" [field]="form.password" placeholder="Ingrese su contraña"
+          class="w-full px-4 py-2 border border-blue-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
+        @for (e of form.password().errors(); track $index) {
+        @if(this.form().touched()) {
+        <p class="text-red-500 text-sm mt-1">
+          {{ e.message }}
+        </p>
+        }
+        }
       </div>
 
+      @if (error) {
+      <p class="text-center text-sm text-red-700 mt-4">
+        {{error}}
+      </p>
 
-      <button
-        type="submit"
-        class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300 font-medium"
-      >
+      }
+
+      <button type="submit"
+        class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300 font-medium">
         Acceder
       </button>
     </form>
 
-    <p class="text-center text-sm text-blue-400 mt-4">
-      Acceso privado. Solo usuarios autorizados.
-    </p>
+
 
   </div>
 </div>
