--- a/src/app/autenticacion/page/login/login.html
+++ b/src/app/autenticacion/page/login/login.html
@@ -37,9 +37,9 @@
         }
       </div>
 
-      @if (error) {
+      @if (error()) {
       <p class="text-center text-sm text-red-700 mt-4">
-        {{error}}
+        {{error()}}
       </p>
 
       }
