--- a/src/app/app.html
+++ b/src/app/app.html
@@ -158,7 +158,7 @@
 
 
 			<!-- Logout -->
-			<a routerLink="/logout" class="flex items-center p-3 hover:bg-gray-100 mt-auto">
+			<a (click)="serraSession()" class="flex items-center p-3 hover:bg-gray-100 mt-auto">
 				<span class="material-icons">logout</span>
 				<span class="ml-2">Cerrar sesión</span>
 			</a>
